FF-20 fix styling bug when opening and closing entry list collapse

--- a/src/main/resources/static/sass/styles/budget.scss
+++ b/src/main/resources/static/sass/styles/budget.scss
@@ -226,6 +226,10 @@
     }
 }
 
+#new-item-type-input{
+    margin: auto;
+}
+
 
 .btn-group{
     .type-button{
